--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -27,7 +27,7 @@
 			font-size: 14px;
 			font-weight: 400;
 			text-transform: uppercase;
-			color: $light;
+			color: #facd8a;
 			transition: 0.5s;
 			position: relative;
 
