--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    {{- partial "head/head.html" . -}}
-    <body>
-        <main>
-            <!-- Render any additional page content below the page's content blocks -->
-            {{ block "main" . }}{{ end }}
-        </main>
-        <h3 x-data="{ message: 'I ❤️ HUGO, Alpine & Bookshop' }" x-text="message"></h3>
-    </body>
+{{- partial "head/head.html" . -}}
+
+<body>
+    <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <!-- Loader to display before content Load-->
+    <div class="loading">
+
+        <!-- <img src="img/loader.gif" alt=""> -->
+
+        <div class="windows8 loading-position">
+            <div class="wBall" id="wBall_1">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_2">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_3">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_4">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_5">
+                <div class="wInnerBall"></div>
+            </div>
+        </div>
+    </div>
+    {{ partial "nav.html" . }}
+    <main>
+        <!-- Render any additional page content below the page's content blocks -->
+        {{ block "main" . }}{{ end }}
+    </main>
+    
+    <script src="plugins/jquery.min.js"></script>
+
+    <script src="plugins/bootstrap/bootstrap.min.js"></script>
+    <!-- slick slider -->
+    <script src="plugins/slick/slick.min.js"></script>
+    <!-- filter -->
+    <script src="plugins/filterizr/jquery.filterizr.min.js"></script>
+    <!-- Lightbox -->
+    <script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <!-- Parallax -->
+    <script src="plugins/parallax.min.js"></script>
+    <!-- Video -->
+    <script src="plugins/jquery.vide.js"></script>
+    <!-- google map -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+    <script src="plugins/google-map/gmap.js"></script>
+
+    <script src="js/script.js"></script>
+</body>
+
 </html>
