Feat: data file footer partial

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,7 +34,7 @@
         <!-- Render any additional page content below the page's content blocks -->
         {{ block "main" . }}{{ end }}
     </main>
-    
+    {{ partial "footer.html" . }}
     <script src="plugins/jquery.min.js"></script>
 
     <script src="plugins/bootstrap/bootstrap.min.js"></script>
