--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -2,6 +2,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+    <!-- ThemeFisher Icon -->
+    <link rel="stylesheet" href="plugins/themefisher-fonts/themefisher-fonts.css">
+    <!-- Light Box -->
+    <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
+    <!-- animation css -->
+    <link rel="stylesheet" href="plugins/animate/animate.css">
+    <!-- slick slider -->
+    <link rel="stylesheet" href="plugins/slick/slick.css">
+
     {{ $js := resources.Get "js/build.js" }}
     <script src="{{ $js.RelPermalink }}"></script>
     <!-- The bookshop_scss partial returns a slice of all SCSS resources from your Bookshop -->
@@ -11,8 +24,8 @@
     resources.ToCSS }}
     <!-- fetch all *.css files in the ./assets/css/ folder and combine them -->
     {{ $css := resources.Match "css/*.css" | resources.Concat "glob1.css" }}
-    <!-- fetch all *.scss files in the ./assets/css/ folder and combine and convert to css -->
-    {{ $scss := resources.Match "css/*.scss" | resources.Concat "glob2.css" | resources.ToCSS }}
+    <!-- fetch all *.scss files in the ./assets/scss/ folder and combine and convert to css -->
+    {{ $scss := resources.Match "scss/style.scss" | resources.Concat "glob5.css" | resources.ToCSS }}
     <!-- combine all bookshop, css and scss files into one resources -->
     {{ $css := slice $css $scss $bookscss | resources.Concat "main.css"  }}
     <!-- minify and fingerprint css while in production -->
@@ -20,6 +33,16 @@
         {{ $css := $css | resources.Minify | resources.Fingerprint }} 
     {{ end }} 
     <link rel="stylesheet" href="{{ $css.Permalink }}" />
+
+    <style>
+        /* Always set the map height explicitly to define the size of the div
+         * element that contains the map. */
+        #map_canvas {
+          height: 100%;
+        }
+        /* Optional: Makes the sample page fill the window. */
+      </style>
+    <script src="plugins/modernizr.min.js"></script>
 
     <title>{{ print .Page.Title " | " .Site.Title }}</title>
 </head>
