Feat: index page componentised

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -49,7 +49,7 @@
     <!-- Video -->
     <script src="plugins/jquery.vide.js"></script>
     <!-- google map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="plugins/google-map/gmap.js"></script>
 
     <script src="js/script.js"></script>
