Fix: Bugs with cloudcannon

--- a/component-library/components/generic/team-member/team-member.hugo.html
+++ b/component-library/components/generic/team-member/team-member.hugo.html
@@ -2,7 +2,7 @@
     <div class="team-member">
       <div class="th-mouse-effect">
         <div class="team-img">
-          <img src="{{ .image_src }}" alt="{{ .image_alt }}">
+          <img src="{{ .image }}" alt="{{ .image_alt }}">
         </div>
         <div class="overlay text-center">
           <div class="content">
