--- a/component-library/components/simple/left-right-block/left-right-block.hugo.html
+++ b/component-library/components/simple/left-right-block/left-right-block.hugo.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-6">
                 <div class="img-content">
-                    <img class="img-responsive" src="{{ .image_src }}" alt="{{ .image_alt }}">
+                    <img class="img-responsive" src="{{ .image }}" alt="{{ .image_alt }}">
                 </div>
             </div>
         </div>
