--- a/component-library/components/simple/testimonial/testimonial.hugo.html
+++ b/component-library/components/simple/testimonial/testimonial.hugo.html
@@ -5,7 +5,7 @@
         <!-- <div class="round-shape"></div> -->
         <p class="testimonials-description">{{ .content }}</p>
         <div class="author">
-            <img src="{{ .author_image_src }}" alt="{{ .author_image_alt }}">
+            <img src="{{ .author_image }}" alt="{{ .author_image_alt }}">
             <h3 class="author-name">{{ .author_name }}</h3>
             <span class="designation">{{ .author_designation }}</span>
         </div>
