--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand logo" href="/">
-                <img src="{{ .Site.Data.nav.logo.image_src }}" alt="{{ .Site.Data.nav.logo.alt }}">
+                <img src="{{ .Site.Data.nav.logo.image }}" alt="{{ .Site.Data.nav.logo.alt }}">
             </a>
         </div>
 
