--- a/component-library/components/simple/left-right-block/left-right-block.hugo.html
+++ b/component-library/components/simple/left-right-block/left-right-block.hugo.html
@@ -1,6 +1,6 @@
 <!-- Case Study Description
       top section -->
-<div class="case-study-content left-right-block--{{ .background_color }} left-right-block--{{ .image_alignment }}">
+<div class="case-study-content left-right-block--{{ .background }} left-right-block--{{ .image_alignment }}">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
