--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,3 +1,4 @@
+{{ if ne .Page.Title "Components" }}
 <!-- Navigation -section
   =========================-->
 <nav class="navbar navbar-fixed-top navigation">
@@ -25,3 +26,4 @@
         </div><!-- /.navbar-collapse -->
     </div>
 </nav>
+{{ end }}
