--- a/assets/css/themefisher-fonts/themefisher-fonts.css
+++ b/assets/css/themefisher-fonts/themefisher-fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'themefisher-font';
-  src:  url('fonts/themefisher-font.eot?ug5hnh');
-  src:  url('fonts/themefisher-font.eot?ug5hnh#iefix') format('embedded-opentype'),
-    url('fonts/themefisher-font.ttf?ug5hnh') format('truetype'),
-    url('fonts/themefisher-font.woff?ug5hnh') format('woff'),
-    url('fonts/themefisher-font.svg?ug5hnh#themefisher-font') format('svg');
+  src:  url('/plugins/themefisher-fonts/fonts/themefisher-font.eot?ug5hnh');
+  src:  url('/plugins/themefisher-fonts/fonts/themefisher-font.eot?ug5hnh#iefix') format('embedded-opentype'),
+    url('/plugins/themefisher-fonts/fonts/themefisher-font.ttf?ug5hnh') format('truetype'),
+    url('/plugins/themefisher-fonts/fonts/themefisher-font.woff?ug5hnh') format('woff'),
+    url('/plugins/themefisher-fonts/fonts/themefisher-font.svg?ug5hnh#themefisher-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
