--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -2,11 +2,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     {{ $js := resources.Get "js/build.js" }}
-    <script src="{{ $js.RelPermalink }}" preload></script>
+    <script src="{{ $js.RelPermalink }}"></script>
     <!-- The bookshop_scss partial returns a slice of all SCSS resources from your Bookshop -->
     {{ $bookshop_scss_files := partial "bookshop_scss" . }}
     <!-- resources.Concat converts all of the above SCSS resources into one logical CSS file -->
