Fix: loop over all bookshop components from fron matter

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{ partial "hero" . }}
-  {{ range .Params.content_blocks }}
-    {{ partial "bookshop" . }}
-  {{ end }}
+    <!-- Loop through any structures in the front-matter and render them -->
+    {{ partial "bookshop_bindings" `.Params.content_blocks` }}
+    {{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }}
 {{ end }}
