Fix: Button named incorrectly, changed to link

--- a/component-library/components/sections/contact/contact.hugo.html
+++ b/component-library/components/sections/contact/contact.hugo.html
@@ -8,7 +8,7 @@
             <div class="block">
               <h2>{{ .heading }}</h2>
               <p>{{ .content }}</p>
-              {{ partial "bookshop" (slice "generic/button" .button )}}
+              {{ partial "bookshop" (slice "generic/link" .link )}}
             </div>
           </div>
         </div>
