--- a/component-library/components/sections/staff-block/staff-block.hugo.html
+++ b/component-library/components/sections/staff-block/staff-block.hugo.html
@@ -11,7 +11,7 @@
     
     <div class="col-md-12">
       <div class="join-team text-center">
-        {{ partial "bookshop" (slice "generic/button" .button )}}
+        {{ partial "bookshop" (slice "generic/link" .link )}}
       </div>
     </div>
     </div>
