--- a/component-library/components/sections/welcome/welcome.hugo.html
+++ b/component-library/components/sections/welcome/welcome.hugo.html
@@ -3,7 +3,7 @@
     <p>{{ .content }}</p>
 
     <div x-data="{ count: 0 }">
-        <button x-on:click="count++">Increment</button>
+        <link x-on:click="count++">Increment</link>
 
         <span x-text="count"></span>
     </div>
