--- a/component-library/components/simple/left-right-block/left-right-block.hugo.html
+++ b/component-library/components/simple/left-right-block/left-right-block.hugo.html
@@ -9,7 +9,7 @@
                     <h4 class="inner-title"> {{ .heading }}</h4>
                     <p class="case-description">{{ .content_html | safeHTML }}</p>
                     <!-- View More Details -->
-                    {{ partial "bookshop" (slice "generic/button" .button )}}
+                    {{ partial "bookshop" (slice "generic/link" .link )}}
                 </div>
             </div>
             <div class="col-md-6">
