Feat: Added button as pricing plans didnt use the same format as links

--- a/component-library/components/generic/link/link.hugo.html
+++ b/component-library/components/generic/link/link.hugo.html
@@ -1,2 +1,1 @@
-{{ $secondary := "secondary" }}
-<a class="btn btn-default btn-main {{ if eq .style $secondary }} th-btn-border {{ end }}" href="{{ .url }}" role="link">{{ .content }}</a>
+<a class="btn btn-default btn-main" href="{{ .url }}" role="link">{{ .content }}</a>
