--- a/component-library/components/simple/pricing-plan/pricing-plan.hugo.html
+++ b/component-library/components/simple/pricing-plan/pricing-plan.hugo.html
@@ -13,7 +13,7 @@
                     {{ partial "bookshop" (slice "simple/plan-feature" .)}}
                 {{ end }}
             </ul>
-            {{ partial "bookshop" (slice "generic/link" .link )}}
+            {{ partial "bookshop" (slice "generic/button" .button )}}
         </div>
     </div>
 </div>
