--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center">{{ .Params.hero.heading | safeHTML }}</h1>
+          <h1 class="text-center">{{ .Params.hero.heading}}</br>{{ .Params.hero.subheading }}</h1>
         </div>
       </div>
     </div>
