Fix: Split map into its own component

--- a/component-library/components/sections/contact/contact.hugo.html
+++ b/component-library/components/sections/contact/contact.hugo.html
@@ -14,5 +14,5 @@
         </div>
       </div>
     </div>
-    <div id="map" data-latitude="51.507351" data-longitude="-0.127758"></div>
+    {{ partial "bookshop" (slice "generic/map" .map )}}
   </section>
