--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -40,6 +40,7 @@
 		z-index: 10;
 		background: $brand-secondary;
 		box-shadow: 0px 0 45px 8px #000;
+		max-width: 450px;
 	}
 }
 
@@ -67,6 +68,9 @@
 	color: $primary-color;
 	min-width: 56px;
 	line-height: 1;
+	margin-top: auto;
+	margin-bottom: auto;
+	text-align: center;
 }
 
 .ct-info{
