--- a/layouts/partials/portfolio-list.html
+++ b/layouts/partials/portfolio-list.html
@@ -1,4 +1,4 @@
-{{ partial "hero" . }}
+{{ partial "bookshop" (slice "sections/hero" .Params.hero ) }}
 <section class="portfolio">
     <div class="container">
         <div class="row">
