--- a/layouts/portfolios/single.html
+++ b/layouts/portfolios/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    {{ partial "hero" . }}
+    {{ partial "bookshop" (slice "sections/hero" .Params.hero ) }}
     <section class="portfolio-single">
         <div class="container-fluid padding-0">
             <div class="row margin-0">
@@ -46,5 +46,5 @@
         </div>
     </section>
     {{ partial "bookshop_bindings" `.Params.content_blocks` }}
-    {{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }} 
+    {{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }}
 {{ end }}
