--- a/component-library/components/sections/big-hero/big-hero.hugo.html
+++ b/component-library/components/sections/big-hero/big-hero.hugo.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>{{ .heading | safeHTML }}</h1>
+                <h1 class="text-center">{{ .heading}}</br>{{ .subheading }}</h1>
             </div>
         </div>
     </div>
