--- a/component-library/components/simple/pricing-plan/pricing-plan.hugo.html
+++ b/component-library/components/simple/pricing-plan/pricing-plan.hugo.html
@@ -4,7 +4,7 @@
       ===================== -->
         <div class="table-price border-effect">
             <h4 class="pricing-title">{{ .heading }}</h4>
-            <h2 class="price">&#36; {{ .price }}</h2>
+            <h2 class="price">{{ .currency }} {{ .price }}</h2>
             <p class="table-month">/ {{ .plan_length }}</p>
         </div>
         <div class="pricing-list border-effect">
