--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,7 @@
     <!-- Video -->
     <script src="/plugins/jquery.vide.js"></script>
     <!-- google map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{.Site.Data.company.google_maps_api_key}}"></script>
     <script src="/plugins/google-map/gmap.js"></script>
 
     <script src="/js/script.js"></script>
