Fix: Loading issue for portfolio items

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key={{.Site.Data.company.google_maps_api_key}}"></script>
     <script src="/plugins/google-map/gmap.js"></script>
 
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" async></script>
 </body>
 
 </html>
