Fix: Added the ability to add bookshop components at bottom of pages

--- a/layouts/partials/blog-list.html
+++ b/layouts/partials/blog-list.html
@@ -71,3 +71,5 @@
         </div>
     </div>
 </section>
+{{ partial "bookshop_bindings" `.Params.content_blocks` }}
+{{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }} 
