--- a/component-library/components/generic/filter-button/filter-button.hugo.html
+++ b/component-library/components/generic/filter-button/filter-button.hugo.html
@@ -1,1 +1,1 @@
-<button class="filter btn btn-default btn-main" data-filter="{{ .category }}">{{ .content }}</button>
+<button class="filter btn btn-default btn-main" data-filter="{{ .category }}">{{ .category }}</button>
