--- a/layouts/partials/portfolio-list.html
+++ b/layouts/partials/portfolio-list.html
@@ -3,7 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                {{ partial "bookshop" (slice "sections/filter" .Params.filter ) }}
+                {{ partial "bookshop" (slice "generic/heading" (dict "heading" "Our Portfolio") ) }}
+                <div class="protfolio-mixitup-btn text-center">
+                    <button class="filter btn btn-default btn-main active" data-filter="all">all</button>
+                    {{range $name, $taxonomy := .Site.Taxonomies.category}}
+                        {{ partial "bookshop" (slice "generic/filter-button" (dict "category" $name )) }}
+                    {{end}}
+                </div>
                 <div id="Container" class="filtr-container row">
                     {{ range (.Paginator (len (where .Site.Pages "Section" "portfolios"))).Pages }}
                         {{ if ne .File.BaseFileName "_defaults"}}
