Test/Fix: Srcipt loading at wrong time

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -23,7 +23,7 @@
     {{ end }} 
     <link rel="stylesheet" href="{{ $css.Permalink }}" />
     <!-- slick slider -->
-    <script src="/plugins/slick/slick.min.js" defer></script>
+    <script src="/plugins/slick/slick.min.js" async></script>
     <style>
         /* Always set the map height explicitly to define the size of the div
          * element that contains the map. */
