--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -22,12 +22,12 @@
         {{ $css := $css | resources.Minify | resources.Fingerprint }} 
     {{ end }} 
     <link rel="stylesheet" href="{{ $css.Permalink }}" />
-    
+
     <script src="/plugins/jquery.min.js"></script>
 
     <script src="/plugins/bootstrap/bootstrap.min.js"></script>
     <!-- slick slider -->
-    <script src="/plugins/slick/slick.min.js" async></script>
+    <script src="/plugins/slick/slick.min.js"></script>
     <style>
         /* Always set the map height explicitly to define the size of the div
          * element that contains the map. */
