Fix: Change portfolio filtering and move scripts back to original order

--- a/component-library/components/generic/filter-button/filter-button.hugo.html
+++ b/component-library/components/generic/filter-button/filter-button.hugo.html
@@ -1,1 +1,1 @@
-<button class="filter btn btn-default btn-main" data-filter="{{ .category }}">{{ .category }}</button>
+<button class="filter btn btn-default btn-main" onclick="filterSelection({{ .category }})">{{ .category }}</button>
