--- a/assets/scss/layout/_portfolio.scss
+++ b/assets/scss/layout/_portfolio.scss
@@ -16,6 +16,14 @@
 		}
 	}
 
+	.filtr-item {
+		display: none;
+	}
+	  
+	.show {
+		display: inline-block;
+	}
+
 	.portfolio-caption{
 		background:$primary-color;
 		padding: 20px 23px !important;
