--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,11 @@
         {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer.html" . }}
- 
+    <script src="/plugins/jquery.min.js"></script>
+
+    <script src="/plugins/bootstrap/bootstrap.min.js"></script>
+    <!-- slick slider -->
+    <script src="/plugins/slick/slick.min.js"></script> 
     <!-- filter -->
     <script src="/plugins/filterizr/jquery.filterizr.min.js"></script>
     <!-- Lightbox -->
