--- a/layouts/partials/blog-right-column.html
+++ b/layouts/partials/blog-right-column.html
@@ -3,13 +3,7 @@
 =========================-->
     <div class="blog-sidbar">
         <div class="search widgets">
-            <form class="form-inline">
-                <div class="form-group search-input">
-                    <input type="text" class="form-control" placeholder="Search ...">
-                </div>
-                <button type="submit" class="btn btn-default tf-search-btn"><i
-                        class="tf-search"></i></button>
-            </form>
+            <a href="/search" class="list-group-item">Search</a>
         </div>
         <div class="categories widgets">
             <div class="list-group text-center">
