--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -44,6 +44,10 @@
 ====================== */
 @import "scss/layout/contact";
 
+/* Search page style
+====================== */
+@import "scss/layout/search";
+
 
 
 @import "scss/layout/responsive";
