--- a/layouts/partials/portfolio-list.html
+++ b/layouts/partials/portfolio-list.html
@@ -1,4 +1,6 @@
+{{ partial "bookshop_bindings" `(dict "live_render" false)` }}
 {{ partial "bookshop" (slice "sections/hero" .Params.hero ) }}
+
 <section class="portfolio">
     <div class="container">
         <div class="row">
@@ -7,6 +9,7 @@
                 <div class="protfolio-mixitup-btn text-center">
                     <button class="filter btn btn-default btn-main active" data-filter="all">all</button>
                     {{range $name, $taxonomy := .Site.Taxonomies.category}}
+                        {{ partial "bookshop_bindings" `(dict "live_render" false)` }}
                         {{ partial "bookshop" (slice "generic/filter-button" (dict "category" $name )) }}
                     {{end}}
                 </div>
