Updated 'layouts/partials/blog-right-column.html' via CloudCannon

--- a/layouts/partials/blog-right-column.html
+++ b/layouts/partials/blog-right-column.html
@@ -3,7 +3,7 @@
 =========================-->
     <div class="blog-sidbar">
         <div class="search widgets">
-            <a href="/search" class="list-group-item">Search</a>
+            <a href="/search/" class="list-group-item">Search</a>
         </div>
         <div class="categories widgets">
             <div class="list-group text-center">
