--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
   {{ $page := (.Site.GetPage "section" "posts") }}
+  {{ partial "bookshop_bindings" `(dict "live_render" false)` }}
   {{ partial "bookshop" (slice "sections/hero" $page.Params.hero ) }}
   <!-- Blog Sections 
     =========================-->
   <section class="blog-single">
     <div class="container">
       <div class="row">
+        {{ partial "bookshop_bindings" `(dict "live_render" false)` }}
         {{ partial "bookshop" (slice "generic/heading" $page.Params.heading ) }}
         <div class="col-md-9">
           <!-- Blog Left Sections 
