feat: make components live editable on portfolio and blog pages

--- a/layouts/partials/blog-list.html
+++ b/layouts/partials/blog-list.html
@@ -1,17 +1,11 @@
-{{ $hero := (.Site.GetPage "section" "posts") }}
-{{ partial "bookshop_bindings" `(dict "live_render" false)` }}
-{{ partial "bookshop" (slice "sections/hero" $hero.Params.hero ) }}
+{{ partial "bookshop_bindings" `.Params.hero_blocks` }}
+{{ partial "bookshop_partial" (slice "page" .Params.hero_blocks) }} 
 
 <section class="blog">
     <div class="container">
         <div class="row">
-            {{ if .Params.heading }}
-                {{ partial "bookshop_bindings" `(dict "live_render" false)` }}
-                {{ partial "bookshop" (slice "generic/heading" .Params.heading ) }}
-            {{ else }}
-                {{ partial "bookshop_bindings" `(dict "live_render" false)` }}
-                {{ partial "bookshop" (slice "generic/heading" (dict "heading" (.Title | humanize))) }}
-            {{ end }}
+            {{ partial "bookshop_bindings" `.Params.content_blocks` }}
+            {{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }} 
             <div class="col-md-9">
             {{ range $index, $element := .Paginator.Pages }}
                     <div class="blog-list-section {{if not (modBool $index 2)}}blog-content-left{{else}}blog-content-right{{end}} row">
@@ -73,5 +67,3 @@
         </div>
     </div>
 </section>
-{{ partial "bookshop_bindings" `.Params.content_blocks` }}
-{{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }} 
