feat: add data binding to heading

--- a/layouts/portfolios/single.html
+++ b/layouts/portfolios/single.html
@@ -4,7 +4,7 @@
     <section class="portfolio-single">
         <div class="container-fluid padding-0">
             <div class="row margin-0">
-                <div class="title text-center">
+                <div class="title text-center" data-cms-bind="#heading">
                     <h2>{{ .Params.heading }}</h2>
                 </div>
                 <div class="flex">
